# mingmax

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.bat  msvcvars.bat
assets/shader/: sprite.frag  sprite.vert  test_triangle.vert
docs/: plan.txt
src/: main.c
src/assets/: atlas.c  atlas.h
src/core/: app.c  app.h  clock.c  clock.h  game.h  init.h  platform.c  platform.h
src/core/init/: init_clock.h
src/game/: game.c  main.c
src/input/: input.h
src/renderer/: r_batch.c  r_batch.h  r_batch_oop.c  r_batch_oop.h  r_shader.c  r_shader.h  r_texture.c  r_texture.h  renderer.c  renderer.h
src/util/: memory.c  memory.h  string.c  string.h
